2007-01-10  Andy Wingo  <wingo@pobox.com>

	* flumotion/twisted/pb.py (Avatar.disconnect): Return the result
	of loseConnection().

	* flumotion/common/server.py (Server.startTCP, Server.startSSL):
	Return the port we create.

2007-01-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpfile/admin_gtk.py:
	Initialise _stats to None, so that a check on the value of _stats
	does not traceback if _stats is not set in time.
	* flumotion/component/misc/httpfile/httpfile.py:
	Add a rotateLog method, mirroring the one in http-streamer.
	* flumotion/component/plugs/loggers.py:
	Add a rotate method, regression from 0.2.x.

2007-01-10  Andy Wingo  <wingo@pobox.com>

	* flumotion/component/component.py (BaseComponent.init): Create
	the jobstate with a mood of waking, because a component that is
	running is in at least the waking state by definition.
	(BaseComponentMedium.remote_getState): Remove mood check, as we
	initialize the mood correctly now.

2007-01-08  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/planet.py (ManagerComponentState.setJobState):
	Make sure mood is proxied last, fixes #552.

	* flumotion/manager/component.py (ComponentAvatar._setMood): use
	setMood.
	(ComponentAvatar.detached): Actually unlink the jobstate and
	componentstate when the job logs out; was not being done before.

	* flumotion/manager/manager.py (Vishnu._getComponentState):
	Because of the change in BaseComponentMedium.remote_getState, we
	know we will have a non-sleeping component mood, so we can remove
	this manual mood munge.
	(Vishnu.componentAddMessage)
	(Vishnu.workerAttached.workerAvatarComponentListReceived)
	(Vishnu._addComponent, Vishnu._updateStateFromConf): Use setMood.
	(Vishnu.componentStop.setSleeping): Set the component's mood to
	sleeping after the disconnect deferred fires, should be enough
	time for the component state to unlink from the job state.
	(Vishnu._createErrback): A failed component start because a job is