@@ -1,3 +1,8 @@
+2007-01-11  Andy Wingo  <wingo@pobox.com>
+
+	* flumotion/admin/multi.py (MultiAdminModel.addManager): Take an
+	optional tenacity argument, to pass on to AdminMode.connectToHost.
+
 2007-01-10  Andy Wingo  <wingo@pobox.com>
 
 	* flumotion/twisted/pb.py (Avatar.disconnect): Return the result
